# TextDiversity

./: .gitignore  README.md  requirements.txt  setup.cfg  tester.ipynb
eval/: challenge_morphology.csv  challenge_syntactical.csv  filters.py  generate_data.py  instrinsic_results.csv  intrinsic.py  intrinsic_results_banking77.csv  intrinsic_results_snips_built_in_intents.csv  intrinsic_results_snips_built_in_intents_distilbert.csv  intrinsic_results_trec_coarse_label.csv  intrinsic_results_trec_fine_label.csv  intrinsic_results_tweet_eval_emotion.csv  notes.txt  phonology_challenge.csv  postprocess_textdiversity_results.ipynb  requirements.txt  train.py  train_results_banking77.csv  train_results_glue_mrpc.csv  train_results_snips_built_in_intents.csv  train_results_snips_built_in_intents_distilbert.csv  train_results_snips_built_in_intents_distilbert_cl.csv  train_results_trec_coarse_label.csv  train_results_trec_coarse_label_tiny.csv  train_results_trec_fine_label.csv  train_results_tweet_eval_emotion.csv  train_results_tweet_eval_emotion_cl.csv  train_results_tweet_eval_emotion_tiny.csv  utils.py
eval/paraphraser/submod/: submodular_funcs.py
eval/paraphrasers/: __init__.py
eval/paraphrasers/dips/: requirements.txt  transformation.py
eval/paraphrasers/qcpg/: qcpg.py
eval/paraphrasers/qcpgpp/: qcpgpp.py
eval/paraphrasers/sowreap/: notes.txt  requirements.txt  transformation.py
eval/paraphrasers/textdiv/: transformation.py
eval/paraphrasers/textdiversity/: transformation.py
eval/prepared_datasets/banking77_beam/: cache-3c9758fd5c772dc5.arrow  cache-b7e33e8a6a85d5c5.arrow  dataset.arrow  dataset_info.json  state.json
eval/prepared_datasets/banking77_dips/: cache-3a87cf99c77e54bb.arrow  cache-7c35709f555e6b01.arrow  cache-b22238a0fbfe06f4.arrow  dataset.arrow  state.json
src/textdiversity/: __init__.py  metric.py  utils.py
td/: diversity_metrics.py  metric.py  utils.py
td/similarities/: phoneme_similarities.csv
td/text_diversities/: morphological.py  semantic.py
(+390 files in other folders)
