[metadata]
name = textdiversity
version = 0.0.5
author = Fabrice Harel-Canada
author_email = fabriceyhc@gmail.com
description = A family of textual diversity metrics 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabriceyhc/TextDiversity
project_urls =
    Bug Tracker = https://github.com/fabriceyhc/TextDiversity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
include_package_data = True


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    biopython==1.79
    cadences==0.3.4
    karateclub==1.2.3
    networkx==2.8.2
    phonemizer==3.2.0
    scikit-learn==1.1.1
    scipy==1.8.1
    spacy==3.3.0
    torch==1.11.0
    transformers==4.19.2
    sentence-transformers==2.2.0
    stanza==1.4.0
    zss==1.2.0

[options.packages.find]
where = src

[options.package_data]
* = *.csv
