[metadata]
name = textdiversity
version = 0.0.22
author = Fabrice Harel-Canada
author_email = fabriceyhc@gmail.com
description = A family of textual diversity metrics 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabriceyhc/TextDiversity
project_urls =
    Bug Tracker = https://github.com/fabriceyhc/TextDiversity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
include_package_data = True


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    amrlib
    biopython
    cadences
    karateclub
    networkx
    phonemizer
    pyemd
    scikit-learn
    scipy
    spacy
    torch
    transformers
    sentence-transformers
    stanza
    unideocde
    zss

[options.packages.find]
where = src

[options.package_data]
* = *.csv
